@@ -1,3 +1,8 @@
+Tue May 17 06:42:53 2011  Eric Hodel  <drbrain@segment7.net>
+
+	* lib/logger.rb:  Improve documentation.  Patch by David Copeland.
+	  [Ruby 1.9 - Bug #4706]
+
 Tue May 17 06:28:14 2011  Eric Hodel  <drbrain@segment7.net>
 
 	* lib/gserver.rb:  Improve documentation.  Patch by David Copeland.
